Add styles to the navbar

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Oxanium:wght@200..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Rock+Salt&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav class="navbar">
         <div class="logo"> Karibu Kenya </div>
         <button class="hamburger" id="hamburger">&#9776;</button>
         <ul class="nav-links" id="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="gallery.html">Products</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Contact</a></li>
       </nav>
       <section class="hero-section">
         <div class="overlay">
