Add styles to the hero section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#">Products</a></li>
           <li><a href="#">Contact</a></li>
       </nav>
-      <section class="hero-section">
+      <section class="hero">
         <div class="overlay">
           <h1>KARIBU KENYA</h1>
           <h2>EXPLORE THE BEAUTY OF KENYA</h2>
