--- a/index.html
+++ b/index.html
@@ -34,5 +34,20 @@
         </div>
       </section>
     </header>
+    <main>
+      <section class="about">
+        <div class="about-content">
+          <div>
+            <h2>Who We Are</h2>
+          </div>
+          <div>
+            <p>Born from John and Noah’s frustration with Kenya’s exploitative tourism, our startup crafts affordable, wildlife-first safaris that rewrites the rules. We partner with Maasai guides and conservancies to deliver uncrowded Big 5 encounters, while funneling profits into  anti-poaching patrols and community lodges-because real adventure should protect the wild spaces it celebrates</p>
+          </div>         
+        </div>
+        <div class="img-container">
+          <img src="images/Karibu Kenya.jpg" alt="Karibu Kenya Logo" class="about-logo">
+        </div>
+      </section>
+    </main>
   </body>
 </html>
