Complete about section.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <main>
       <section class="about">
         <div class="about-content">
-          <div>
+          <div class="about-title">
             <h2>Who We Are</h2>
           </div>
-          <div>
+          <div class="about-text">
             <p>Born from John and Noah’s frustration with Kenya’s exploitative tourism, our startup crafts affordable, wildlife-first safaris that rewrites the rules. We partner with Maasai guides and conservancies to deliver uncrowded Big 5 encounters, while funneling profits into  anti-poaching patrols and community lodges-because real adventure should protect the wild spaces it celebrates</p>
           </div>         
         </div>
