Create products section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,27 @@
           <img src="images/Karibu Kenya.jpg" alt="Karibu Kenya Logo" class="about-logo">
         </div>
       </section>
+      <section class="products">
+        <div class="products-title">
+          <h2>Our Products</h2>
+        </div>
+        <div class="product-list">
+          <div class="product-item">
+            <img src="images/safari1.jpg" alt="Safari 1">
+            <h3>Safari Adventure</h3>
+            <p>Experience the thrill of a lifetime with our guided safari tours.</p>
+          </div>
+          <div class="product-item">
+            <img src="images/safari2.jpg" alt="Safari 2">
+            <h3>Wildlife Photography</h3>
+            <p>Capture stunning wildlife moments with our expert photography guides.</p>
+          </div>
+          <div class="product-item">
+            <img src="images/safari3.jpg" alt="Safari 3">
+            <h3>Cultural Tours</h3>
+            <p>Immerse yourself in the rich cultures of Kenya with our cultural tours.</p>
+          </div>
+        </div>
     </main>
   </body>
 </html>
