Add CSS to product section. Add a placeholder in the products line. Add images for the product section.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="#">Products</a></li>
           <li><a href="#">Contact</a></li>
       </nav>
+
       <section class="hero">
         <div class="overlay">
           <h1>KARIBU KENYA</h1>
@@ -34,6 +35,7 @@
         </div>
       </section>
     </header>
+
     <main>
       <section class="about">
         <div class="about-content">
@@ -48,27 +50,66 @@
           <img src="images/Karibu Kenya.jpg" alt="Karibu Kenya Logo" class="about-logo">
         </div>
       </section>
+
       <section class="products">
         <div class="products-title">
-          <h2>Our Products</h2>
+          <h2>Discover What We Have In Store</h2>
         </div>
+        <p class="product-list-title">1. Our Core Experiences</p>
+        <div class="product-list">
+          <div class="product-item">
+            <img src="images/Classice Game Drives.jpg" alt="Classic Game Drives">
+            <h3>Classic Game Drives</h3>
+            <p>Daily game drives led by Maasai guides who share ancestral wildlife knowledge</p>
+          </div>
+          <div class="product-item">
+            <img src="images/Migration.jpg" alt="Safari 2">
+            <h3>Great Migration Expeditions</h3>
+            <p>Front-row seats to the Mara River crossings, with eco-friendly mobile camps near hot spots</p>
+          </div>
+          <div class="product-item">
+            <img src="images/Walking Safari.jpg" alt="Safari 3">
+            <h3>Walking Safaris</h3>
+            <p>Intimate bush walks in private conservancies (Ol Pejeta, Laikipia)</p>
+          </div>
+        </div>
+        <p class="product-list-title">2. Premium and Unique Add-Ons</p>
+        <div class="product-list">
+          <div class="product-item">
+            <img src="images/Hot Air balloon.jpg" alt="Safari 1">
+            <h3>Hot Air Balloon Safaris</h3>
+            <p>Float over the Mara at dawn, followed by breakfast in the wild.</p>
+          </div>
+          <div class="product-item">
+            <img src="images/Photography.jpg" alt="Safari 2">
+            <h3>Photography-focused Tours</h3>
+            <p>Borrow pro gear and learn from guides who’ve tracked leopards for decades.</p>
+          </div>
+          <div class="product-item">
+            <img src="images/Bush Dinner.jpg" alt="Safari 3">
+            <h3>Bush Dinners under the stars</h3>
+            <p>Feast on Swahili cuisine while Maasai warriors share fireside stories</p>
+          </div>
+        </div>
+        <p class="product-list-title">3. Family and Group Packages</p>
         <div class="product-list">
           <div class="product-item">
             <img src="images/safari1.jpg" alt="Safari 1">
-            <h3>Safari Adventure</h3>
-            <p>Experience the thrill of a lifetime with our guided safari tours.</p>
+            <h3>Hot Air Balloon Safaris</h3>
+            <p>Float over the Mara at dawn, followed by breakfast in the wild.</p>
           </div>
           <div class="product-item">
             <img src="images/safari2.jpg" alt="Safari 2">
-            <h3>Wildlife Photography</h3>
-            <p>Capture stunning wildlife moments with our expert photography guides.</p>
+            <h3>Photography-focused Tours</h3>
+            <p>Borrow pro gear and learn from guides who’ve tracked leopards for decades.</p>
           </div>
           <div class="product-item">
             <img src="images/safari3.jpg" alt="Safari 3">
-            <h3>Cultural Tours</h3>
-            <p>Immerse yourself in the rich cultures of Kenya with our cultural tours.</p>
+            <h3>Bush Dinners under the stars</h3>
+            <p>Feast on Swahili cuisine while Maasai warriors share fireside stories</p>
           </div>
         </div>
+      </section>
     </main>
   </body>
 </html>
