--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
         <div class="logo"> Karibu Kenya </div>
         <button class="hamburger" id="hamburger">&#9776;</button>
         <ul class="nav-links" id="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#products">Products</a></li>
+          <li><a href="#contacts">Contact</a></li>
       </nav>
 
-      <section class="hero">
+      <section class="hero" id="hero">
         <div class="overlay">
           <h1>KARIBU KENYA</h1>
           <h2>EXPLORE THE BEAUTY OF KENYA</h2>
           <p>Discover breathtaking landscapes, vibrant cultures and unforgettable adventures.</p>
-          <a href=# class="cta-button">Explore Now</a>
+          <a href=#products class="cta-button">Explore Now</a>
         </div>
       </section>
     </header>
 
     <main>
-      <section class="about">
+      <section class="about" id="about">
         <div class="about-content">
           <div class="about-title">
             <h2>Who We Are</h2>
@@ -51,7 +51,7 @@
         </div>
       </section>
 
-      <section class="products">
+      <section class="products" id="products">
         <div class="products-title">
           <h2>Discover What We Have In Store</h2>
         </div>
@@ -63,12 +63,12 @@
             <p>Daily game drives led by Maasai guides who share ancestral wildlife knowledge</p>
           </div>
           <div class="product-item">
-            <img src="images/Migration.jpg" alt="Safari 2">
+            <img src="images/Migration.jpg" alt="Migration Expeditions">
             <h3>Great Migration Expeditions</h3>
             <p>Front-row seats to the Mara River crossings, with eco-friendly mobile camps near hot spots</p>
           </div>
           <div class="product-item">
-            <img src="images/Walking Safari.jpg" alt="Safari 3">
+            <img src="images/Walking Safari.jpg" alt="Walking Safaris">
             <h3>Walking Safaris</h3>
             <p>Intimate bush walks in private conservancies (Ol Pejeta, Laikipia)</p>
           </div>
@@ -76,17 +76,17 @@
         <p class="product-list-title">2. Premium and Unique Add-Ons</p>
         <div class="product-list">
           <div class="product-item">
-            <img src="images/Hot Air balloon.jpg" alt="Safari 1">
+            <img src="images/Hot Air balloon.jpg" alt="Hot Air Balloon Safaris">
             <h3>Hot Air Balloon Safaris</h3>
             <p>Float over the Mara at dawn, followed by breakfast in the wild.</p>
           </div>
           <div class="product-item">
-            <img src="images/Photography.jpg" alt="Safari 2">
+            <img src="images/Photography.jpg" alt="Photography-focused Tours">
             <h3>Photography-focused Tours</h3>
             <p>Borrow pro gear and learn from guides who’ve tracked leopards for decades.</p>
           </div>
           <div class="product-item">
-            <img src="images/Bush Dinner.jpg" alt="Safari 3">
+            <img src="images/Bush Dinner.jpg" alt="Bush Dinner">
             <h3>Bush Dinners under the stars</h3>
             <p>Feast on Swahili cuisine while Maasai warriors share fireside stories</p>
           </div>
@@ -108,6 +108,24 @@
             <h3>Bush Dinners under the stars</h3>
             <p>Feast on Swahili cuisine while Maasai warriors share fireside stories</p>
           </div>
+        </div>
+      </section>
+
+      <section class="faq">
+        <div class="faq-title">
+          <h2>Frequently Asked Questions</h2>
+        </div>
+        <div class="faq-item">
+          <h3>What is the best time to visit Kenya for a safari?</h3>
+          <p>The best time for a safari in Kenya is during the dry season, from June to October, when wildlife is more active and visible.</p>
+        </div>
+        <div class="faq-item">
+          <h3>Do I need a visa to visit Kenya?</h3>
+          <p>Yes, most visitors require a visa to enter Kenya. You can apply online or upon arrival at the airport.</p>
+        </div>
+        <div class="faq-item">
+          <h3>What should I pack for a safari in Kenya?</h3>
+          <p>Pack lightweight, breathable clothing, comfortable shoes, a hat, sunscreen, insect repellent, and binoculars for wildlife viewing.</p>
         </div>
       </section>
     </main>
