Add CSS to FAQ section. Add accordion logic to FAQ section using Javascript. Add section scrolling logic using CSS.

--- a/index.html
+++ b/index.html
@@ -116,18 +116,20 @@
           <h2>Frequently Asked Questions</h2>
         </div>
         <div class="faq-item">
-          <h3>What is the best time to visit Kenya for a safari?</h3>
-          <p>The best time for a safari in Kenya is during the dry season, from June to October, when wildlife is more active and visible.</p>
+          <h3 class="faq-question">What is the best time to visit Kenya for a safari?</h3>
+          <p class="faq-answer">The best time for a safari in Kenya is during the dry season, from June to October, when wildlife is more active and visible.</p>
         </div>
         <div class="faq-item">
-          <h3>Do I need a visa to visit Kenya?</h3>
-          <p>Yes, most visitors require a visa to enter Kenya. You can apply online or upon arrival at the airport.</p>
+          <h3 class="faq-question">Do I need a visa to visit Kenya?</h3>
+          <p class="faq-answer">Yes, most visitors require a visa to enter Kenya. You can apply online or upon arrival at the airport.</p>
         </div>
         <div class="faq-item">
-          <h3>What should I pack for a safari in Kenya?</h3>
-          <p>Pack lightweight, breathable clothing, comfortable shoes, a hat, sunscreen, insect repellent, and binoculars for wildlife viewing.</p>
+          <h3 class="faq-question">What should I pack for a safari in Kenya?</h3>
+          <p class="faq-answer">Pack lightweight, breathable clothing, comfortable shoes, a hat, sunscreen, insect repellent, and binoculars for wildlife viewing.</p>
         </div>
       </section>
     </main>
+    
+    <script src="script.js"></script>
   </body>
 </html>
