Create Meet the Team Section.

--- a/index.html
+++ b/index.html
@@ -128,8 +128,30 @@
           <p class="faq-answer">Pack lightweight, breathable clothing, comfortable shoes, a hat, sunscreen, insect repellent, and binoculars for wildlife viewing.</p>
         </div>
       </section>
+
+      <section class="Meet the Team">
+        <div class="team-title">
+          <h2>Meet the Team</h2>
+        </div>
+        <div class="team-members">
+          <div class="team-member">
+            <img src="images/JW.jpg" alt="John">
+            <h3>John</h3>
+            <p>Co-founder and Wildlife Expert</p>
+          </div>
+          <div class="team-member">
+            <img src="images/Noah.jpg" alt="Noah">
+            <h3>Noah</h3>
+            <p>Co-founder and Conservation Advocate</p>
+          </div>
+          <div class="team-member">
+            <img src="images/Bemos.jpg" alt="Maria">
+            <h3>Benson</h3>
+            <p>Marketing Director and Safari Enthusiast</p>
+          </div>
+        </div>
     </main>
-    
+
     <script src="script.js"></script>
   </body>
 </html>
