Add CCS to Meet the Team Section.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
       </section>
 
-      <section class="Meet the Team">
+      <section class="meet-the-team">
         <div class="team-title">
           <h2>Meet the Team</h2>
         </div>
