Create Contact Section

--- a/index.html
+++ b/index.html
@@ -145,11 +145,29 @@
             <p>Co-founder and Conservation Advocate</p>
           </div>
           <div class="team-member">
-            <img src="images/Bemos.jpg" alt="Maria">
+            <img src="images/Bemos.jpg" alt="Benson">
             <h3>Benson</h3>
             <p>Marketing Director and Safari Enthusiast</p>
           </div>
         </div>
+      </section>
+
+      <section class="contact" id="contacts">
+        <div class="contact-title">
+          <h2>Reach Out to Us</h2>
+        </div>
+        <form class="contact-form">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required>
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
+
+          <button type="submit">Send Message</button>
+        </form>
     </main>
 
     <script src="script.js"></script>
