--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
         </div>
         <form class="contact-form">
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required>
+          <input type="text" id="name" name="name" required placeholder="Enter name here">
 
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" id="email" name="email" required placeholder="Enter email here">
 
           <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="4" required></textarea>
+          <textarea id="message" name="message" rows="4" required></textarea placeholder="Enter your message here"></textarea>
 
           <button type="submit">Send Message</button>
         </form>
