Create basic footer

--- a/index.html
+++ b/index.html
@@ -164,11 +164,21 @@
           <input type="email" id="email" name="email" required placeholder="Enter email here">
 
           <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="4" required></textarea placeholder="Enter your message here"></textarea>
+          <textarea id="message" name="message" rows="4" required placeholder="Enter your message here"></textarea>
 
           <button type="submit">Send Message</button>
         </form>
     </main>
+
+    <footer class="footer">
+      <div class="footer-content">
+        <p>&copy; 2023 Karibu Kenya. All rights reserved.</p>
+        <div class="social-links">
+          <a href="https://www.facebook.com" target="_blank">Facebook</a>
+          <a href="https://www.twitter.com" target="_blank">Twitter</a>
+          <a href="https://www.instagram.com" target="_blank">Instagram</a>
+        </div>
+      </div>
 
     <script src="script.js"></script>
   </body>
