Add CSS to Submit form button. Add basic CSS to Footer

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
       </section>
 
-      <section class="contact" id="contacts">
+      <section class="contact" id="contact">
         <div class="contact-title">
           <h2>Reach Out to Us</h2>
         </div>
@@ -172,7 +172,7 @@
 
     <footer class="footer">
       <div class="footer-content">
-        <p>&copy; 2023 Karibu Kenya. All rights reserved.</p>
+        <p>&copy; 2025 Karibu Kenya. All rights reserved.</p>
         <div class="social-links">
           <a href="https://www.facebook.com" target="_blank">Facebook</a>
           <a href="https://www.twitter.com" target="_blank">Twitter</a>
