--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#products">Products</a></li>
-          <li><a href="#contacts">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
       </nav>
 
       <section class="hero" id="hero">
