Create scrollable carousel logic.

--- a/index.html
+++ b/index.html
@@ -74,23 +74,43 @@
           </div>
         </div>
         <p class="product-list-title">2. Premium and Unique Add-Ons</p>
-        <div class="product-list">
-          <div class="product-item">
-            <img src="images/Hot Air balloon.jpg" alt="Hot Air Balloon Safaris">
-            <h3>Hot Air Balloon Safaris</h3>
-            <p>Float over the Mara at dawn, followed by breakfast in the wild.</p>
+        <div class="carousel-wrapper">
+          <button class="carousel-btn prev" id="prev">&lt;</button>
+          <div class="product-list" id="carousel-track">
+            <div class="product-item">
+              <img src="images/Hot Air balloon.jpg" alt="Hot Air Balloon Safaris">
+              <h3>Hot Air Balloon Safaris</h3>
+              <p>Float over the Mara at dawn, followed by breakfast in the wild.</p>
+            </div>
+            <div class="product-item">
+              <img src="images/Photography.jpg" alt="Photography-focused Tours">
+              <h3>Photography-focused Tours</h3>
+              <p>Borrow pro gear and learn from guides who’ve tracked leopards for decades.</p>
+            </div>
+            <div class="product-item">
+              <img src="images/Bush Dinner.jpg" alt="Bush Dinner">
+              <h3>Bush Dinners under the stars</h3>
+              <p>Feast on Swahili cuisine while Maasai warriors share fireside stories</p>
+            </div>
+            <div class="product-item">
+              <img src="images/Conservation.jpg" alt="Conservation Experiences">
+              <h3>Helicopter Transfers</h3>
+              <p>Nairobi to Mara in 1 hour and avoid a 5-hour drive</p>
+            </div>
+            <div class="product-item">
+              <img src="images/Conservation.jpg" alt="Maasai Homestead Visits">
+              <h3>Maasai Homestead Visits</h3>
+              <p>Enjoy a day in the life of Maasai residents</p>
+            </div>
+            <div class="product-item">
+              <img src="images/Conservation.jpg" alt="Hyena Night Watch">
+              <h3>Hyena Night Watch</h3>
+              <p>Spend a day with anti-poaching patrols or community rangers</p>
+            </div>
           </div>
-          <div class="product-item">
-            <img src="images/Photography.jpg" alt="Photography-focused Tours">
-            <h3>Photography-focused Tours</h3>
-            <p>Borrow pro gear and learn from guides who’ve tracked leopards for decades.</p>
-          </div>
-          <div class="product-item">
-            <img src="images/Bush Dinner.jpg" alt="Bush Dinner">
-            <h3>Bush Dinners under the stars</h3>
-            <p>Feast on Swahili cuisine while Maasai warriors share fireside stories</p>
-          </div>
+          <button class="carousel-btn next" id="next">&gt;</button>
         </div>
+        
         <p class="product-list-title">3. Family and Group Packages</p>
         <div class="product-list">
           <div class="product-item">
