Refind scrollable carousel. Add more product items

--- a/index.html
+++ b/index.html
@@ -56,27 +56,42 @@
           <h2>Discover What We Have In Store</h2>
         </div>
         <p class="product-list-title">1. Our Core Experiences</p>
-        <div class="product-list">
-          <div class="product-item">
-            <img src="images/Classice Game Drives.jpg" alt="Classic Game Drives">
-            <h3>Classic Game Drives</h3>
-            <p>Daily game drives led by Maasai guides who share ancestral wildlife knowledge</p>
+        <div class="carousel-wrapper">
+          <button class="carousel-btn prev" >&lt;</button>
+          <div class="product-list carousel-track">
+            <div class="product-item">
+              <img src="images/Classice Game Drives.jpg" alt="Classic Game Drives">
+              <h3>Classic Game Drives</h3>
+              <p>Daily game drives led by Maasai guides who share ancestral wildlife knowledge</p>
+            </div>
+            <div class="product-item">
+              <img src="images/Migration.jpg" alt="Migration Expeditions">
+              <h3>Great Migration Expeditions</h3>
+              <p>Front-row seats to the Mara River crossings, with eco-friendly mobile camps near hot spots</p>
+            </div>
+            <div class="product-item">
+              <img src="images/Walking Safari.jpg" alt="Walking Safaris">
+              <h3>Walking Safaris</h3>
+              <p>Intimate bush walks in private conservancies (Ol Pejeta, Laikipia)</p>
+            </div>
+            <div class="product-item">
+              <img src="images/Walking Safari.jpg" alt="Walking Safaris">
+              <h3>Swahili Kitchen Chats</h3>
+              <p>Learn to cook nyama choma ith lodge chefs</p>
+            </div>
+            <div class="product-item">
+              <img src="images/Walking Safari.jpg" alt="Rhino Notches">
+              <h3>Rhino Notches</h3>
+              <p>Join rangers in Ol Pejeta to ID rhinos by their ear markings</p>
+            </div>
           </div>
-          <div class="product-item">
-            <img src="images/Migration.jpg" alt="Migration Expeditions">
-            <h3>Great Migration Expeditions</h3>
-            <p>Front-row seats to the Mara River crossings, with eco-friendly mobile camps near hot spots</p>
-          </div>
-          <div class="product-item">
-            <img src="images/Walking Safari.jpg" alt="Walking Safaris">
-            <h3>Walking Safaris</h3>
-            <p>Intimate bush walks in private conservancies (Ol Pejeta, Laikipia)</p>
-          </div>
+          <button class="carousel-btn next" >&gt;</button>
         </div>
+        
         <p class="product-list-title">2. Premium and Unique Add-Ons</p>
         <div class="carousel-wrapper">
-          <button class="carousel-btn prev" id="prev">&lt;</button>
-          <div class="product-list" id="carousel-track">
+          <button class="carousel-btn prev">&lt;</button>
+          <div class="product-list carousel-track">
             <div class="product-item">
               <img src="images/Hot Air balloon.jpg" alt="Hot Air Balloon Safaris">
               <h3>Hot Air Balloon Safaris</h3>
@@ -108,26 +123,39 @@
               <p>Spend a day with anti-poaching patrols or community rangers</p>
             </div>
           </div>
-          <button class="carousel-btn next" id="next">&gt;</button>
+          <button class="carousel-btn next" >&gt;</button>
         </div>
         
         <p class="product-list-title">3. Family and Group Packages</p>
-        <div class="product-list">
-          <div class="product-item">
-            <img src="images/safari1.jpg" alt="Safari 1">
-            <h3>Hot Air Balloon Safaris</h3>
-            <p>Float over the Mara at dawn, followed by breakfast in the wild.</p>
-          </div>
-          <div class="product-item">
-            <img src="images/safari2.jpg" alt="Safari 2">
-            <h3>Photography-focused Tours</h3>
-            <p>Borrow pro gear and learn from guides who’ve tracked leopards for decades.</p>
-          </div>
-          <div class="product-item">
-            <img src="images/safari3.jpg" alt="Safari 3">
-            <h3>Bush Dinners under the stars</h3>
-            <p>Feast on Swahili cuisine while Maasai warriors share fireside stories</p>
-          </div>
+        <div class="carousel-wrapper">
+          <button class="carousel-btn prev">&lt;</button>
+          <div class="product-list carousel-track">
+            <div class="product-item">
+              <img src="images/safari1.jpg" alt="Safari 1">
+              <h3>Kid-Friendly Game Drives</h3>
+              <p>Shorter Routes with animal-tracking games and child-safe bush picnics</p>
+            </div>
+            <div class="product-item">
+              <img src="images/safari2.jpg" alt="Safari 2">
+              <h3>CEO Safari Challenge</h3>
+              <p>GPS Scavenger Hunt to find the "Big 5 Leadership Traits"</p>
+            </div>
+            <div class="product-item">
+              <img src="images/safari3.jpg" alt="Safari 3">
+              <h3>Birthday Surprises</h3>
+              <p>A surprise birthday party with a cake delivered by a Land Rover at a scenic lookout</p>
+            </div>
+            <div class="product-item">
+              <img src="images/safari3.jpg" alt="Safari 3">
+              <h3>Mara Olympics</h3>
+              <p>Compete in spear-throwing, animal call quizzes, and speed tent pitching.</p>
+            </div>
+            <div class="product-item">
+              <img src="images/safari3.jpg" alt="Safari 3">
+              <h3>Rent an entire camp</h3>
+              <p>For families and groups of 12+, with custom menus(even picky eaters are covered)</p>
+            </div>
+          <button class="carousel-btn next">&gt;</button>
         </div>
       </section>
 
