--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
           <a href="https://www.twitter.com" target="_blank">Twitter</a>
           <a href="https://www.instagram.com" target="_blank">Instagram</a>
         </div>
+        <div id="visit-count">Visits: 0</div> 
       </div>
 
     <script src="script.js"></script>
