Create basic chatbot HTML layout

--- a/index.html
+++ b/index.html
@@ -200,6 +200,30 @@
         </div>
       </section>
 
+      <section class="chatbot">
+        <div class="chatbot-container">
+          <div class="chatbot-header">Chat with Simba, our AI chatbot</div>
+          <div class="chatbot-messages" id="chatbox">
+            <div class="message bot">
+              <img src="images/lion-icon.png" alt="Bot">
+              <div class="bubble">Hello, I’m Simba. How may I help you today?</div>
+            </div>
+            <div class="message user">
+              <div class="bubble">Hello, Simba. Could you get me the best deals for travelling next month?</div>
+              <img src="images/user-icon.png" alt="User">
+            </div>
+            <div class="message bot">
+              <img src="images/lion-icon.png" alt="Bot">
+              <div class="bubble">Sure, I’m happy to help. So the best deals for next month are:</div>
+            </div>
+          </div>
+          <div class="chatbot-input">
+            <input type="text" id="user-input" placeholder="Please type here" />
+            <button id="send-btn">➤</button>
+          </div>
+        </div>
+      </section>
+
       <section class="contact" id="contact">
         <div class="contact-title">
           <h2>Reach Out to Us</h2>
