Added more styles to chatbot. Removed some bugs

--- a/index.html
+++ b/index.html
@@ -201,25 +201,15 @@
       </section>
 
       <section class="chatbot">
-        <div class="chatbot-container">
-          <div class="chatbot-header">Chat with Simba, our AI chatbot</div>
-          <div class="chatbot-messages" id="chatbox">
-            <div class="message bot">
-              <img src="images/lion-icon.png" alt="Bot">
-              <div class="bubble">Hello, I’m Simba. How may I help you today?</div>
-            </div>
-            <div class="message user">
-              <div class="bubble">Hello, Simba. Could you get me the best deals for travelling next month?</div>
-              <img src="images/user-icon.png" alt="User">
-            </div>
-            <div class="message bot">
-              <img src="images/lion-icon.png" alt="Bot">
-              <div class="bubble">Sure, I’m happy to help. So the best deals for next month are:</div>
-            </div>
+        <button class="chatbot-toggle">💬 Chat</button>
+        <div class="chatbot-container" id="chatbot">
+          <div class="chat-header" id="chat-header">
+            <h2>Ask Simba 🦁</h2>
           </div>
-          <div class="chatbot-input">
-            <input type="text" id="user-input" placeholder="Please type here" />
-            <button id="send-btn">➤</button>
+          <div class="chat-box"></div>
+          <div class="chat-input">
+            <input type="text" id="user-input" placeholder="Ask me anything about Kenya...">
+            <button id="send-btn">Send</button>
           </div>
         </div>
       </section>
@@ -254,5 +244,7 @@
       </div>
 
     <script src="script.js"></script>
+    <script src="https://js.puter.com/v2/"></script>
+
   </body>
 </html>
