Add more products. Removed placeholders in the product line. Add more images to match products.

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
               <p>Intimate bush walks in private conservancies (Ol Pejeta, Laikipia)</p>
             </div>
             <div class="product-item">
-              <img src="images/Walking Safari.jpg" alt="Walking Safaris">
+              <img src="images/nyama choma.jpg" alt="Swahili Kitchen Chats">
               <h3>Swahili Kitchen Chats</h3>
-              <p>Learn to cook nyama choma ith lodge chefs</p>
+              <p>Learn to cook nyama choma with lodge chefs</p>
             </div>
             <div class="product-item">
-              <img src="images/Walking Safari.jpg" alt="Rhino Notches">
+              <img src="images/rhino.jpg" alt="Rhino Notches">
               <h3>Rhino Notches</h3>
               <p>Join rangers in Ol Pejeta to ID rhinos by their ear markings</p>
             </div>
@@ -108,17 +108,17 @@
               <p>Feast on Swahili cuisine while Maasai warriors share fireside stories</p>
             </div>
             <div class="product-item">
-              <img src="images/Conservation.jpg" alt="Conservation Experiences">
+              <img src="images/helikopter.jpg" alt="Helicopter Transfers">
               <h3>Helicopter Transfers</h3>
               <p>Nairobi to Mara in 1 hour and avoid a 5-hour drive</p>
             </div>
             <div class="product-item">
-              <img src="images/Conservation.jpg" alt="Maasai Homestead Visits">
+              <img src="images/maasai.jpg" alt="Maasai Homestead Visits">
               <h3>Maasai Homestead Visits</h3>
               <p>Enjoy a day in the life of Maasai residents</p>
             </div>
             <div class="product-item">
-              <img src="images/Conservation.jpg" alt="Hyena Night Watch">
+              <img src="images/night watch.jpg" alt="Hyena Night Watch">
               <h3>Hyena Night Watch</h3>
               <p>Spend a day with anti-poaching patrols or community rangers</p>
             </div>
@@ -131,27 +131,27 @@
           <button class="carousel-btn prev">&lt;</button>
           <div class="product-list carousel-track">
             <div class="product-item">
-              <img src="images/safari1.jpg" alt="Safari 1">
+              <img src="images/children.jpg" alt="Kid-Friendly Game Drives">
               <h3>Kid-Friendly Game Drives</h3>
               <p>Shorter Routes with animal-tracking games and child-safe bush picnics</p>
             </div>
             <div class="product-item">
-              <img src="images/safari2.jpg" alt="Safari 2">
+              <img src="images/ceo.jpg" alt="CEO Safari Challenge">
               <h3>CEO Safari Challenge</h3>
               <p>GPS Scavenger Hunt to find the "Big 5 Leadership Traits"</p>
             </div>
             <div class="product-item">
-              <img src="images/safari3.jpg" alt="Safari 3">
+              <img src="images/birthday.jpg" alt="Birthday Surprises">
               <h3>Birthday Surprises</h3>
               <p>A surprise birthday party with a cake delivered by a Land Rover at a scenic lookout</p>
             </div>
             <div class="product-item">
-              <img src="images/safari3.jpg" alt="Safari 3">
+              <img src="images/mara olympics (1).jpg" alt="Safari 3">
               <h3>Mara Olympics</h3>
               <p>Compete in spear-throwing, animal call quizzes, and speed tent pitching.</p>
             </div>
             <div class="product-item">
-              <img src="images/safari3.jpg" alt="Safari 3">
+              <img src="images/tents.jpg" alt="Rent an entire camp">
               <h3>Rent an entire camp</h3>
               <p>For families and groups of 12+, with custom menus(even picky eaters are covered)</p>
             </div>
