--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
 
       <title>Karibu Kenya</title>
 
+      <!--Stylesheet-->
       <link rel="stylesheet" href="styles.css">
 
+      <!--Favicon-->
       <link rel="icon" href="images/KK Fav.jpg" type="image/x-icon">
 
+      <!--Google Fonts-->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Oxanium:wght@200..800&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Rock+Salt&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   </head>
   <body>
+    <!--Header Section-->
     <header class="header">
       <nav class="navbar">
         <div class="logo"> Karibu Kenya </div>
@@ -24,6 +28,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#products">Products</a></li>
           <li><a href="#contact">Contact</a></li>
+        </ul>
       </nav>
 
       <section class="hero" id="hero">
@@ -37,6 +42,7 @@
     </header>
 
     <main>
+      <!--About Section-->
       <section class="about" id="about">
         <div class="about-content">
           <div class="about-title">
@@ -51,6 +57,7 @@
         </div>
       </section>
 
+      <!--Products Section-->
       <section class="products" id="products">
         <div class="products-title">
           <h2>Discover What We Have In Store</h2>
@@ -159,6 +166,7 @@
         </div>
       </section>
 
+      <!--FAQ Section-->
       <section class="faq">
         <div class="faq-title">
           <h2>Frequently Asked Questions</h2>
@@ -177,6 +185,7 @@
         </div>
       </section>
 
+      <!--Meet the Team Section-->
       <section class="meet-the-team">
         <div class="team-title">
           <h2>Meet the Team</h2>
@@ -200,6 +209,7 @@
         </div>
       </section>
 
+      <!--Chatbot Section-->
       <section class="chatbot">
         <button class="chatbot-toggle">💬 Chat</button>
         <div class="chatbot-container" id="chatbot">
@@ -214,6 +224,7 @@
         </div>
       </section>
 
+      <!--Contact Section-->
       <section class="contact" id="contact">
         <div class="contact-title">
           <h2>Reach Out to Us</h2>
@@ -232,6 +243,7 @@
         </form>
     </main>
 
+    <!--Footer Section-->
     <footer class="footer">
       <div class="footer-content">
         <p>&copy; 2025 Karibu Kenya. All rights reserved.</p>
@@ -242,7 +254,9 @@
         </div>
         <div id="visit-count">Visits: 0</div> 
       </div>
-
+    </footer>
+    
+    <!--Scripts-->
     <script src="script.js"></script>
     <script src="https://js.puter.com/v2/"></script>
 
